增加ATL和QT 2套实现逻辑框架 增加 ATL Menu

--- a/Demo/ATLProject1/ATLProject1.vcxproj
+++ b/Demo/ATLProject1/ATLProject1.vcxproj
@@ -94,7 +94,7 @@
       </SDLCheck>
       <RuntimeLibrary>MultiThreadedDebug</RuntimeLibrary>
       <MultiProcessorCompilation>true</MultiProcessorCompilation>
-      <AdditionalIncludeDirectories>D:\code\WindowsClientDev\winx\WTL\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir)\WTL\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Midl>
       <MkTypLibCompatible>false</MkTypLibCompatible>
