--- a/Demo/ATLProject1/ATLProject1.vcxproj.filters
+++ b/Demo/ATLProject1/ATLProject1.vcxproj.filters
@@ -52,6 +52,9 @@
     <ClCompile Include="WTL\DCCache.cpp">
       <Filter>源文件</Filter>
     </ClCompile>
+    <ClCompile Include="ATLScrollBar.cpp">
+      <Filter>源文件</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="stdafx.h">
@@ -91,6 +94,9 @@
       <Filter>头文件</Filter>
     </ClInclude>
     <ClInclude Include="WTL\Common.h">
+      <Filter>头文件</Filter>
+    </ClInclude>
+    <ClInclude Include="ATLScrollBar.h">
       <Filter>头文件</Filter>
     </ClInclude>
   </ItemGroup>
